# create-files-action

./: .gitignore  .prettierignore  CONTRIBUTING.md  Dockerfile  README.md  action.yml  build.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: lint.yaml  release.yaml  test.yaml  verify.yaml
src/: functions.py  main.py  render.py
src/templates/: redirect.jinja  redirect.js
