# Project
[project]
name = "create-files-action"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
  "Jinja2>=3,<4",
  "actions-tools[github]>=0.3.0",
]

[dependency-groups]
dev = [
  "bandit",
  "black",
  "isort",
  "mypy",
  "ruff",
  "tombi",
  "toml-run",
  "ty",
  "yamllint",
]

# Bandit
# https://bandit.readthedocs.io/en/latest/config.html
[tool.bandit]
exclude_dirs = [".venv"]

# Black
# https://black.readthedocs.io/en/stable/usage_and_configuration/
[tool.black]
line-length = 119
extend-exclude = '(\.github)'

# Coverage
# https://coverage.readthedocs.io/en/latest/
[tool.coverage.run]
omit = ["*/.venv/*", "*/__pycache__/*", "*.pyc"]
source = ["src"]

# Isort
# https://pycqa.github.io/isort/docs/configuration/options.html
[tool.isort]
profile = "black"
lines_after_imports = 2
src_paths = ["src"]
skip = [".venv", ".github"]

# Mypy
# https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
# ignore_missing_imports = true
exclude = [".venv"]

# Ruff
# https://docs.astral.sh/ruff/configuration/
[tool.ruff]
line-length = 119
target-version = "py313"
extend-exclude = [".github"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "Q"]

# Scripts
# https://github.com/cssnr/toml-run
[tool.scripts]
test = "act -j test -e event.json --use-gitignore=false --insecure-secrets --env RUNNER_DEBUG=1"
format = """
uv run black .
uv run isort -c .
uv run ruff format
uv run tombi format .
which prettier && prettier --write . || echo missing prettier
"""
lint = """
run bandit
run mypy
run ruff
run yamllint
which prettier && prettier --check . || echo missing prettier
uv run black --check .
uv run isort -c .
uv run tombi lint .
uv run ty check -v .
uv lock --check
"""
bandit = "uv run bandit -c pyproject.toml -r ."
mypy = "uv run mypy ."
ruff = "uv run ruff check ."
yamllint = "uv run yamllint -c .github/yamllint.yaml ."
